@@ -2,6 +2,8 @@
 
 * November 6
 
+- Yang Tse removed a couple of potential zero size memory allocations.
+
 - Andreas Rieke fixed the line endings in the areslib.dsp file that I (Daniel)
   broke in the 1.3.2 release. We should switch to a system where that file is
   auto-generated. We could rip some code for that from curl...
